--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "handlebars": "^4.7.7",
     "nodemon": "^2.0.22",
     "socket.io": "^4.6.1",
+    "sweetalert2": "^11.7.5",
     "uuid4": "^2.0.3"
   }
 }
