--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
+    "fs": "^0.0.1-security",
     "handlebars": "^4.7.7",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
+    "path": "^0.12.7",
     "socket.io": "^4.6.1",
     "sweetalert2": "^11.7.5",
     "uuid4": "^2.0.3"
