--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "express-handlebars": "^7.0.7",
     "fs": "^0.0.1-security",
     "handlebars": "^4.7.7",
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.2.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "path": "^0.12.7",
-    "socket.io": "^4.6.1",
+    "socket.io": "^4.6.2",
     "sweetalert2": "^11.7.5",
     "uuid4": "^2.0.3"
   }
