--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-    "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+  "scripts": {
+    "start": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
